# XPC-Calc

./: LICENSE.md  README.md  Setup.lhs  xpc-calc.cabal
